--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
   animated_search_bar: "2.3.0"
+  adaptivex: ^0.0.1+5
+  provider: ^6.0.3
   # convex_bottom_bar: ^3.0.0
 
   # responsive_table: ^0.2.0+2
 
-  responsive_table:
-    path: responsive_table-0.2.0/
+  # responsive_table:
+  #   path: responsive_table-0.2.0/
 
 
   intl: ^0.17.0
