--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   animated_search_bar: "2.3.0"
   adaptivex: ^0.0.1+5
   provider: ^6.0.3
+  toggle_switch: ^2.0.1
   # convex_bottom_bar: ^3.0.0
 
   # responsive_table: ^0.2.0+2
