--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   animated_search_bar: "2.3.0"
   adaptivex: ^0.0.1+5
   provider: ^6.0.3
-  dropdown_button2: ^1.8.2
+  flutter_slidable: ^2.0.0
 
   intl: ^0.17.0
 
