--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   adaptivex: ^0.0.1+5
   provider: ^6.0.3
   flutter_slidable: ^2.0.0
-
   intl: ^0.17.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
