--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   shared_preferences: ^2.0.15
+  # convex_bottom_bar: ^3.1.0+1
+  persistent_bottom_nav_bar: ^5.0.2
 
 dev_dependencies:
   flutter_test:
