Settings UI implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   json_serializable: ^6.5.4
   build_runner: ^2.3.3
   json_annotation: ^4.7.0
+  currency_icons: ^0.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
