--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   money_converter: ^2.0.2
   animated_splash_screen: ^1.3.0
   qr_flutter: ^4.0.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_lints: ^2.0.1
