--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   qr_flutter: ^4.0.0
   http: ^0.13.5
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
