--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   qr_flutter: ^4.0.0
   http: ^0.13.5
   auto_size_text: ^3.0.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
