--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: smart_receipts
-description: A new Flutter project.
-
+description: Digital receipts project for thesis.
 
 version: 1.0.0+1
 
@@ -10,22 +9,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  animated_search_bar: "2.3.0"
-  provider: ^6.0.3
-  flutter_slidable: ^2.0.0
-  intl: ^0.17.0
-  shared_preferences: ^2.0.15
-  # convex_bottom_bar: ^3.1.0+1
-  persistent_bottom_nav_bar: ^5.0.2
-  json_serializable: ^6.5.4
-  build_runner: ^2.3.3
-  json_annotation: ^4.7.0
-  currency_icons: ^0.3.0
-  money_converter: ^2.0.2
+
+  ## Core 
+  provider: ^6.0.3 # Provider & Consumers
+  intl: ^0.17.0 # DateTime formatting
+  http: ^0.13.5 # HTTP requests 
+  shared_preferences: ^2.0.15 # Shared Preferences
+  qr_flutter: ^4.0.0 # QR Code generation
+
+  ## UI
+  flutter_slidable: ^2.0.0 # Mobile entry slidable 
+  persistent_bottom_nav_bar: ^5.0.2 # Bottom nav bar
+  currency_icons: ^0.3.0 # Currency icons for selection
   animated_splash_screen: ^1.3.0
-  qr_flutter: ^4.0.0
-  http: ^0.13.5
-  auto_size_text: ^3.0.0
+  auto_size_text: ^3.0.0 # 
   shimmer: ^2.0.0
 
 dev_dependencies:
@@ -34,8 +31,6 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
-
   assets:
     - assets/images/
