--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   auto_size_text: ^3.0.0 # 
   shimmer: ^2.0.0
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.1
